// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process details page milestones panel Snapshot test with default props 1`] = `
<ProcessDetailsMilestonesPanel
  milestones={
    Array [
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m36",
        "name": "Milestone 1: Order placed",
        "status": "ACTIVE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m88",
        "name": "Milestone 3: Order delivered and closed with customer sign off",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75i86",
        "name": "Manager decision",
        "status": "COMPLETED",
      },
    ]
  }
>
  <Card
    data-ouia-component-type="milestones"
    data-ouia-safe={true}
  >
    <article
      className="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Title
            headingLevel="h3"
            size="xl"
          >
            <h3
              className="pf-c-title pf-m-xl"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe={true}
            >
              Milestones
            </h3>
          </Title>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <TextContent
            className="kogito-process-details--milestones__nameText"
          >
            <div
              className="pf-c-content kogito-process-details--milestones__nameText"
            >
              <Text
                component="p"
                key="0"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-1"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 1: Order placed
                   
                  <Label
                    color="blue"
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label pf-m-blue"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Active
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="1"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-2"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                  <Label
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Tooltip
                content="Milestone 3: Order delivered and closed with customer sign off"
                key="2"
              >
                <Text
                  component="p"
                >
                  <p
                    className=""
                    data-ouia-component-id="OUIA-Generated-Text-3"
                    data-ouia-component-type="PF4/Text"
                    data-ouia-safe={true}
                    data-pf-content={true}
                  >
                    <span
                      className="kogito-process-details--milestones__nameTextEllipses"
                    >
                      Milestone 3: Order delivered and closed with customer sign off
                    </span>
                     
                    <Label
                      icon={<InfoCircleIcon />}
                    >
                      <span
                        className="pf-c-label"
                      >
                        <span
                          className="pf-c-label__content"
                        >
                          <span
                            className="pf-c-label__icon"
                          >
                            <InfoCircleIcon>
                              <MockedComponent />
                            </InfoCircleIcon>
                          </span>
                          Available
                        </span>
                      </span>
                    </Label>
                  </p>
                </Text>
                 
              </Tooltip>
              <Text
                component="blockquote"
                key="3"
              >
                <blockquote
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-4"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Manager decision
                   
                  <Label
                    color="green"
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label pf-m-green"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Completed
                      </span>
                    </span>
                  </Label>
                </blockquote>
              </Text>
            </div>
          </TextContent>
        </div>
      </CardBody>
    </article>
  </Card>
</ProcessDetailsMilestonesPanel>
`;

exports[`Process details page milestones panel test assertions 1`] = `
<ProcessDetailsMilestonesPanel
  milestones={
    Array [
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m36",
        "name": "Milestone 1: Order placed",
        "status": "ACTIVE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m88",
        "name": "Milestone 3: Order delivered",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": "AVAILABLE",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75i86",
        "name": "Milestone 3: Order delivered and closed with customer sign off",
        "status": "COMPLETED",
      },
      Object {
        "__typename": "Milestones",
        "id": "27107f38-d888-4edf-9a4f-11b9e6d75m66",
        "name": "Milestone 2: Order shipped",
        "status": undefined,
      },
    ]
  }
>
  <Card
    data-ouia-component-type="milestones"
    data-ouia-safe={true}
  >
    <article
      className="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Title
            headingLevel="h3"
            size="xl"
          >
            <h3
              className="pf-c-title pf-m-xl"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe={true}
            >
              Milestones
            </h3>
          </Title>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <TextContent
            className="kogito-process-details--milestones__nameText"
          >
            <div
              className="pf-c-content kogito-process-details--milestones__nameText"
            >
              <Text
                component="p"
                key="0"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-5"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 1: Order placed
                   
                  <Label
                    color="blue"
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label pf-m-blue"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Active
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="1"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-6"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                  <Label
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="2"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-7"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 3: Order delivered
                   
                  <Label
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Text
                component="p"
                key="3"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-8"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                  <Label
                    icon={<InfoCircleIcon />}
                  >
                    <span
                      className="pf-c-label"
                    >
                      <span
                        className="pf-c-label__content"
                      >
                        <span
                          className="pf-c-label__icon"
                        >
                          <InfoCircleIcon>
                            <MockedComponent />
                          </InfoCircleIcon>
                        </span>
                        Available
                      </span>
                    </span>
                  </Label>
                </p>
              </Text>
              <Tooltip
                content="Milestone 3: Order delivered and closed with customer sign off"
                key="4"
              >
                <Text
                  component="blockquote"
                >
                  <blockquote
                    className=""
                    data-ouia-component-id="OUIA-Generated-Text-9"
                    data-ouia-component-type="PF4/Text"
                    data-ouia-safe={true}
                    data-pf-content={true}
                  >
                    <span
                      className="kogito-process-details--milestones__nameTextEllipses"
                    >
                      Milestone 3: Order delivered and closed with customer sign off
                    </span>
                     
                    <Label
                      color="green"
                      icon={<InfoCircleIcon />}
                    >
                      <span
                        className="pf-c-label pf-m-green"
                      >
                        <span
                          className="pf-c-label__content"
                        >
                          <span
                            className="pf-c-label__icon"
                          >
                            <InfoCircleIcon>
                              <MockedComponent />
                            </InfoCircleIcon>
                          </span>
                          Completed
                        </span>
                      </span>
                    </Label>
                  </blockquote>
                </Text>
                 
              </Tooltip>
              <Text
                component="p"
                key="5"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-10"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Milestone 2: Order shipped
                   
                </p>
              </Text>
            </div>
          </TextContent>
        </div>
      </CardBody>
    </article>
  </Card>
</ProcessDetailsMilestonesPanel>
`;
